fix: resolve RTL layout issues in LESS

--- a/customize.dist/src/less2/include/loading.less
+++ b/customize.dist/src/less2/include/loading.less
@@ -148,6 +148,10 @@
     p.cp-password-info {
         text-align: left;
         margin-bottom: 15px;
+
+        [dir='rtl'] & {
+            text-align: right;
+        }
     }
 
     .cp-loading-spinner-container {
